--- a/Bootstrap/Lab-13_Modal_Windows/index.html
+++ b/Bootstrap/Lab-13_Modal_Windows/index.html
@@ -20,6 +20,56 @@
 		    </div>
 	    </section>
 
+    <!-- 4 cards, designs from lab 12 -->
+	<section class="container">
+	    <div class="row justify-content-center">
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
+			    <section class="card-body">
+				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
+
+				    <h2 class="card-title text-info">Computer game</h2>
+				    <p class="card-subtitle">Computer Games</p>
+				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
+			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
+			    </section>
+		    </div>
+
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
+			    <section class="card-body">
+				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
+
+				    <h2 class="card-title text-info">Computer game</h2>
+				    <p class="card-subtitle">Computer Games</p>
+				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
+			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
+			    </section>
+		    </div>
+
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
+			    <section class="card-body">
+				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
+
+				    <h2 class="card-title text-info">Computer game</h2>
+				    <p class="card-subtitle">Computer Games</p>
+				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
+			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
+			    </section>
+		    </div>
+
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
+			    <section class="card-body">
+				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
+
+				    <h2 class="card-title text-info">Computer game</h2>
+				    <p class="card-subtitle">Computer Games</p>
+				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
+			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
+			    </section>
+		    </div>
+	    </div>
+	</section>
+
+
 	    <section class="modal" id="modalwindow" data-bs-backdropa="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
 		    <div class="modal-dialog">
 			    <div class="modal-content">
@@ -28,11 +78,11 @@
 					    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				    </div>
 
-				    <!-- modal body -->
+				    <!-- modal boooooooooooooooooooooooooooooooooooooooooooooody -->
 				    <div class="modal-body">
 					    <ul>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
+						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier National Park</li>
+						    <li><a href="https://travel.usnews.com/Grand_Teton_National_Park_WY/" target="_blank" rel="noopener-noreferrer">Grand Teton National Park</li>
 					    </ul>
 				    </div>
 			    </div>
@@ -40,114 +90,6 @@
 	    </section>
     </main>
 
-	    <section class="container">
-	    <div class="row justify-content-center">
-
-		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
-			    <section class="card-body">
-				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
-
-				    <h2 class="card-title text-info">Computer game</h2>
-				    <p class="card-subtitle">Computer Games</p>
-				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
-			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
-			    </section>
-		    </div>
-			    <!-- button to open modal window -->
-		    </div>
-	    </section>
-
-	    <section class="modal" id="modalwindow" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
-		    <div class="modal-dialog">
-			    <div class="modal-content">
-				    <div class="modal-header">
-					    <p class="modal-title">Best Places to vist this summer</p>
-					    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				    </div>
-
-				    <!-- modal body -->
-				    <div class="modal-body">
-					    <ul>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
-					    </ul>
-				    </div>
-			    </div>
-		    </div>
-	    </section>
-
-    <section class="container">
-	    <div class="row justify-content-center">
-
-		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
-			    <section class="card-body">
-				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
-
-				    <h2 class="card-title text-info">Computer game</h2>
-				    <p class="card-subtitle">Computer Games</p>
-				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
-			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
-			    </section>
-		    </div>
-			    <!-- button to open modal window -->
-		    </div>
-	    </section>
-
-	    <section class="modal" id="modalwindow" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
-		    <div class="modal-dialog">
-			    <div class="modal-content">
-				    <div class="modal-header">
-					    <p class="modal-title">Best Places to vist this summer</p>
-					    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				    </div>
-
-				    <!-- modal body -->
-				    <div class="modal-body">
-					    <ul>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier Naational Park</li>
-					    </ul>
-				    </div>
-			    </div>
-		    </div>
-	    </section>
-
-    <section class="container">
-	    <div class="row justify-content-center">
-
-		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
-			    <section class="card-body">
-				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
-
-				    <h2 class="card-title text-info">Computer game</h2>
-				    <p class="card-subtitle">Computer Games</p>
-				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
-			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
-			    </section>
-		    </div>
-			    <!-- button to open modal window -->>
-		    </div>
-	    </section>
-
-	    <section class="modal" id="modalwindow" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
-		    <div class="modal-dialog">
-			    <div class="modal-content">
-				    <div class="modal-header">
-					    <p class="modal-title">Best Places to vist this summer</p>
-					    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				    </div>
-
-				    <!-- modal body -->
-				    <div class="modal-body">
-					    <ul>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier National Park</li>
-						    <li><a href="https://travel.usnews.com/Glacier_National_Park_MT/" target="_blank" rel="noopener-noreferrer">Glacier National Park</li>
-					    </ul>
-				    </div>
-			    </div>
-		    </div>
-	    </section>
-    <!-- 4 cards pick one design from lab 12 -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
