--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
        	       <a href="Bootstrap/Lab-13_Modal_Windows/index.html" target="_blank" rel="noopener noreferrer">Lab-13_Modal_Windows</a>
             </div>
 	    <div>
+       	       <a href="Bootstrap/Lab-14_id_Carousel/index.html" target="_blank" rel="noopener noreferrer">Lab-14_id Carousel>
+            </div>
+	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
             </div>
          </ul>
