--- a/Bootstrap/Lab-14_id_Carousel/index.html
+++ b/Bootstrap/Lab-14_id_Carousel/index.html
@@ -11,10 +11,10 @@
 	  <h1>Student's name </h1>
 	  <h2>Carousel of text</h2>
 	  <section class="carousel slide border border-warning" data-bs-ride="carousel">
-		  <div class="carousel-inner text-center display-6 p-3">
-			  <div class="carousel-item active"><p> Toys Flash Sale Today <span class="text-danger display-4"> 40% off</span></p></div>
-			  <div class="carousel-item"><p>Free <span class="text-danger display-4">Shipping</span>within US</p></div>
-			  <div class="carousel-item"><p> Toys Flash Sale Today <span class="text-danger display-4"> 40% off</span></p></div>
+		  <div class="carousel-inner text-center bg-warning display-6 p-3">
+			  <div class="carousel-item active"><p>Powering <span class="text-danger display-4"> through!</span></p></div>
+			  <div class="carousel-item"><p>Free<span class="text-danger display-4">Shipping </span> within US</p></div>
+			  <div class="carousel-item"><p>Toys Flash Sale Today <span class="text-danger display-4"> 40% off</span></p></div>
 			  </div>
 		  </div></section>
 
@@ -22,10 +22,10 @@
 		  <section class="carousel slide w-50 m-auto" data-bs-ride="carousel" id="imageslide">
 			  <main class="carousel-inner">
 				  <div class="carousel-item active"><img class="w-100" src="images/60625--phantasy-star-online-episode-i-ii.png" alt="image"></div>
+				  <div class="carousel-item"><img class="w-100" src="images/Pictures/PSO-05-01-1024x0768.jpg" alt="image"></div>
+				  <div class="carousel-item"><img class="w-100" src="images/Pictures/wp-PSO-440-1024.jpg" alt="image"></div>
 				  <div class="carousel-item"><img class="w-100" src="images/720full-phantasy-star-online-episode-i-&-ii-plus-screenshot.jpg" alt="image"></div>
-				  <div class="carousel-item"><img class="w-100" src="images/720full-phantasy-star-online-episode-i-&-ii-plus-screenshot.jpg" alt="image"></div>
-				  <div class="carousel-item"><img class="w-100" src="images/720full-phantasy-star-online-episode-i-&-ii-plus-screenshot.jpg" alt="image"></div>
-				  <div class="carousel-item"><img class="w-100" src="images/720full-phantasy-star-online-episode-i-&-ii-plus-screenshot.jpg" alt="image"></div>
+		  </section>
 			  </main>
 			  <!-- next and previous button -->
 			  <button class="carousel-control-prev" type="button" data-bs-target="#imageslide" data-bs-slide="prev">
@@ -40,7 +40,7 @@
 
 			  <!-- indicators bars -->
 			  <footer class="carousel-indicators"><button type="button" class="carousel-indicator"
-					  <button class=">
+					  <button class="">
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
