--- a/Bootstrap/Lab-15_Forms/index.html
+++ b/Bootstrap/Lab-15_Forms/index.html
@@ -75,6 +75,14 @@
 		  <div class="mt-3">
 			  <label for="meeting">When do you want to meet?</label>
 			  <input type ="datetime" name="datemeeting" id="meeting">
+		  </div>
+
+		  <div class="mt-3">
+			  <label for="fileupload">Upload supporting document</label>
+			  <input type ="file" name="uploadfile" id="fileupload">
+		  </div>
+
+	  </form>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
