--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
        	       <a href="Bootstrap/Lab-15_Forms/index.html" target="_blank" rel="noopener noreferrer">Lab-15 Forms</a>
             </div>
 	    <div>
+       	       <a href="Project2/index.html" target="_blank" rel="noopener noreferrer">Project 2</a>
+            </div>
+	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
             </div>
          </ul>
