--- a/Project-2/template.html
+++ b/Project-2/template.html
@@ -44,6 +44,34 @@
   </head>
   <body>
     
+<header data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">ceramic watches are nice1111111</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="تبديل التنقل">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">ceramic watches are nice22222</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ceramic watches are nice3333333</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">ceramic watches are nice4444444</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="search the site" aria-label="arilbl">
+          <button class="btn btn-outline-success" type="submit">cwan333</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+</header>
+
 <main class="headerimage">
   <h1 class="visually-hidden">Heroes examples</h1>
   <div class="px-4 py-5 my-5 text-center">
