--- a/Project-2/beta_page-2.html
+++ b/Project-2/beta_page-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="Project-2.css" rel="stylesheet" type="text/css">
-    <title>Heroes · Bootstrap v5.0</title>
+    <title>Project 2 beta</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
 
@@ -44,7 +44,7 @@
   </head>
   <body>
     
-<header data-bs-theme="dark">
+<header data-bs-theme="neutral">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">ceramic watches are nice1111111</a>
@@ -54,18 +54,18 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">ceramic watches are nice22222</a>
+            <a class="nav-link active" aria-current="page" href="#">sports collection</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ceramic watches are nice3333333</a>
+            <a class="nav-link" href="#">Contemporary</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">ceramic watches are nice4444444</a>
+            <a class="nav-link" aria-disabled="true">Exclusive</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="search the site" aria-label="arilbl">
-          <button class="btn btn-outline-success" type="submit">cwan333</button>
+          <button class="btn text-white" type="submit">search</button>
         </form>
       </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn title btn-lg px-4 gap-3">Primary button</button>
+        <button type="button" class="btn title btn-lg px-4 gap-3">Shop now</button>
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
       </div>
     </div>
@@ -93,7 +93,6 @@
 
     <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-      
   </body>
 </html>
 
