--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -8,7 +8,7 @@
 <link href="Project-2.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-	<h1>Beloved watches</h1>
+    <h1 class="visually-hidden">Beloved watches</h1>
     <main class="headcontainer">
 	<header class="header">
 		<section class="exc8_HeroSection">
